<resources>
    <string name="app_name">Paysera-Currency</string>
    <string name="my_balances">MY BALANCES (Click to reset default balances)</string>
    <string name="currency_exchange">CURRENCY EXCHANGE</string>
    <string name="submit">SUBMIT</string>
    <string name="click_to_show_balances">Click to show balances</string>
    <string name="sell">Sell</string>
    <string name="receive">Receive</string>
    <string name="enter_your_amount_hare">Amount</string>
    <string name="currency_converted">Currency converted</string>
    <string name="done">Done</string>
</resources>